--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/hump"]
 	path = libs/hump
 	url = https://github.com/vrld/hump.git
+[submodule "libs/serpent"]
+	path = libs/serpent
+	url = https://github.com/pkulchenko/serpent.git
